--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "tfs-basecss",
-  "version": "0.9.1",
+  "name": "@tfs-8/basecss",
+  "version": "0.9.2",
   "private": false,
   "type": "module",
   "description": "BaseCSS is a lightweight css library designed to simplify responsive and scalable web design.",
-  "main": "base.css",
-  "style": "base.css",
+  "main": "base.min.css",
+  "style": "base.min.css",
   "files": [
     "README.md",
     "base.css",
     "base.min.css"
   ],
   "scripts": {
-    "create": "cat src/*.css > base.css && npm run format",
-    "build": "npm run create && npx clean-css-cli base.css -o base.min.css",
+    "create": "cat src/*.css > base.css",
+    "build": "npm run create && npm run format && npm run minify",
+    "minify": "npx clean-css-cli base.css -o base.min.css",
     "format": "npx prettier -w ."
   },
   "keywords": [
@@ -36,6 +37,7 @@
   },
   "author": {
     "name": "Farhan Madni",
+    "url": "https://github.com/mfm-347",
     "email": "madnifm347@outlook.com"
   },
   "license": "MIT"
