--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
   "name": "@tfs-8/basecss",
-  "version": "0.9.6",
+  "version": "0.9.7",
   "private": false,
   "type": "commonjs",
   "description": "BaseCSS is a lightweight css library designed to simplify responsive and scalable web design.",
-  "main": "base.min.css",
-  "style": "base.min.css",
+  "main": "dist/base.min.css",
+  "style": "dist/base.min.css",
   "files": [
-    "base.css",
-    "base.min.css"
+    "dist/*"
   ],
   "scripts": {
     "build": "node build.js && npm run format && npm run minify",
-    "minify": "npx clean-css-cli base.css -o base.min.css",
+    "minify": "find dist -name '*.css' ! -name '*.min.css' -exec sh -c 'npx clean-css-cli \"$1\" -o \"${1%.css}.min.css\"' _ {} \\;",
     "format": "npx prettier -w ."
   },
   "keywords": [
     "css",
+    "html",
     "library",
     "responsive-design",
     "lightweight-css",
