--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tfs-8/basecss",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "private": false,
   "type": "commonjs",
   "description": "BaseCSS is a lightweight css library designed to simplify responsive and scalable web design.",
@@ -10,9 +10,10 @@
     "dist/*"
   ],
   "scripts": {
-    "build": "node build.js && npm run format && npm run minify",
+    "build": "node build.js && npm run minify",
+    "preminify": "prettier -w .",
     "minify": "find dist -name '*.css' ! -name '*.min.css' -exec sh -c 'npx clean-css-cli \"$1\" -o \"${1%.css}.min.css\"' _ {} \\;",
-    "format": "prettier -w ."
+    "lint": "stylelint **/*.css"
   },
   "keywords": [
     "css",
@@ -48,6 +49,8 @@
   "license": "MIT",
   "devDependencies": {
     "clean-css-cli": "^5.6.3",
-    "prettier": "^3.4.2"
+    "prettier": "^3.4.2",
+    "stylelint": "^16.14.1",
+    "stylelint-config-standard": "^37.0.0"
   }
 }
