--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://json.schemastore.org/prettierrc",
   "semi": false,
-  "singleQuote": true,
   "tabWidth": 2,
-  "printWidth": 100
+  "printWidth": 100,
+  "plugins": ["@nirtamir2/prettier-plugin-css-order"]
 }
