--- a/.github/ISSUE_TEMPLATE/bug_fix.yml
+++ b/.github/ISSUE_TEMPLATE/bug_fix.yml
@@ -1,6 +1,6 @@
 name: Bug Report
 description: Report a bug or an issue with this project.
-labels: bug
+labels: [bug, error]
 body:
   - type: markdown
     attributes:
