--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,6 +1,6 @@
 name: Feature Request
 description: Suggest a new feature or enhancement for this project.
-labels: enhancement
+labels: [enhancement, idea]
 body:
   - type: markdown
     attributes:
