--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -19,10 +19,10 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Install dependencies
-        run: npm ci
+        run: npm i
 
       - name: Run Prettier to format source files
         run: |
